syntax = "proto3";

package rpc_msg;

//-------------RPC-------------

enum RPC_OPCODES {
	RPC_None = 0;
	RPC_EchoTest = 1;

	RPC_MysqlDescTable = 401;
	RPC_MysqlQuery = 402;
	RPC_MysqlInsert = 403;
	RPC_MysqlUpdate = 404;
	RPC_MysqlDelete = 405;
	RPC_MysqlQueryByFilter = 406;
	RPC_MysqlMultiQuery = 407;

	OP_RPC_LoginPending = 1001;
}

enum RPC_CODE {
	CODE_Ok = 0;
	CODE_Ok_Async = 1;

	CODE_Timeout = 100;
	CODE_Unregister = 101;
	CODE_ParseError = 102;
	CODE_ErrorServerPost = 103; 
	CODE_RouteNotLinkToServer = 104;
	CODE_RouteSendToServerError = 105;
	CODE_OpcodeUnregister = 106;
	CODE_CreateMsgError = 107;
	CODE_LogicThreadNull = 108;
	CODE_NotReceivedReply = 109;
	CODE_NotSend = 110;
	CODE_LoadFromDbError = 111;
	CODE_DirtyFlagZero = 112;
	CODE_QueryError = 113;
	CODE_TableNameNotExistError = 114;
	CODE_GenerateQuerySQLError = 115;
	CODE_NotMatchedResultError = 116;
}


message CHANNEL
{
	uint32 realm = 1; // 区服ID
	uint32 type = 2;  // 服务类型
	uint32 id = 3;    // 服务ID
}

message CONTROLLER 
{
	uint64 seq_id = 1;
	uint64 timeout_ms = 2;
	bool server_stream = 3;
}

message ClientMessageInfo
{
	uint32 opcodes = 1;
	uint32 seq_num = 2;
}

message RoleIdentifier
{
	uint64 user_id = 1;
	CHANNEL gw_id = 2;
	ClientMessageInfo info = 3;
}

message CLIENT_IDENTIFIER
{
	CHANNEL stub = 1;
	uint64 seq_id = 2;
	bool required_reply = 3;
}

message SERVER_IDENTIFIER
{
	CHANNEL stub = 1;
}

message RPC_REQUEST
{
	CLIENT_IDENTIFIER client = 1;  // 调用方
	SERVER_IDENTIFIER server = 2;  // 被调用方
	bool server_stream = 3;        // 是否连续响应
	RPC_OPCODES opcodes = 4;
	bytes args_data = 5;
}

message STATUS
{
	uint32 code = 1;
	string msg = 2;
}

message RPC_RESPONSE
{
	CLIENT_IDENTIFIER client = 1; // 调用方（与请求时一致）
	SERVER_IDENTIFIER server = 2; // 被调用方
	STATUS status = 3;
	bool has_more = 4;
	uint32 offset = 5;
	bytes result_data = 6;
}

message RPC_Multiplexer_Forward
{
	RoleIdentifier role = 1;
	ClientMessageInfo info = 2;
	bytes body_msg = 3;
}


message PRC_DeMultiplexer_Forward
{
	RoleIdentifier role = 1;
	uint32 opcodes = 2;
	bytes body_msg = 3;
}


message MSG_RPC_REQUEST_ECHO
{
	uint64 value1 = 1;
	string value2 = 2;
}

message MSG_RPC_RESPONSE_ECHO
{
	uint64 value1 = 1;
	string value2 = 2;
}